# metrics-rs-opentelemetry

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
src/: builder.rs  lib.rs  recorder.rs
