[package]
name = "metrics-opentelemetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.17.0"
metrics-util = "0.10.1"
opentelemetry = { version = "0.16.0", features = ["metrics"] }
parking_lot = "0.11.2"
quanta = "0.9.3"