[package]
name = "metrics-opentelemetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
metrics = "0.17.0"
metrics-util = "0.10.1"
opentelemetry = { version = "0.16.0", features = ["metrics"] }
parking_lot = "0.11.2"
prometheus = "0.12.0"
quanta = "0.9.3"

[dev-dependencies]
opentelemetry-prometheus = "0.9.0"
