[package]
name = "metrics-exporter-opentelemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
metrics = "0.17.0"
metrics-util = "0.14.0"
opentelemetry = { version = "0.17.0", features = ["metrics"] }
parking_lot = "0.11.2"
quanta = "0.9.3"

[dev-dependencies]
opentelemetry-prometheus = "0.9.0"
prometheus = "0.13.0"